# chemical-graph-series

./: CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
notebooks/: 01_Building_Graphs.ipynb  02_Positional_Encoding.ipynb  03_GAT_Model.ipynb  04_Sparse Attention.ipynb  05_Full_Graph_Transformer.ipynb  06_Advanced_Graph_Models.ipynb  07_Modelling_and_Predictions.ipynb
